--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "dotenv": "^8.2.0",
     "express": "^4.18.2",
+    "express-handlebars": "^7.1.2",
     "handlebars": "^4.7.8",
     "mysql2": "^2.1.0",
     "sequelize": "^5.21.7"
