--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "nodemon": "^2.0.3"
   },
   "dependencies": {
+    "connect-session-sequelize": "^7.1.7",
     "dotenv": "^8.2.0",
     "express": "^4.18.2",
     "express-handlebars": "^7.1.2",
+    "express-session": "^1.17.3",
     "handlebars": "^4.7.8",
     "mysql2": "^2.1.0",
-    "sequelize": "^5.21.7"
+    "sequelize": "6.1.0"
   }
 }
